--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,9 @@ round-avatar: true
 # By default, the navigation bar and footer have a light gray background, and the main page
 # has a white background. You can specify a different background colour or a background image
 # for the navigation bar, the main page, and the footer.
-# navbar-col: "orange"
+ navbar-col: "green"
 # navbar-img: "/assets/img/bgimage.png"
-# footer-col: "blue"
+ footer-col: "green"
 # footer-img: "/assets/img/bgimage.png"
 # page-col: "#FF0000"
 # page-img: "/assets/img/bgimage.png"
