--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # --- General options --- #
 
 # Name of website
-title: Anudit Verma
+title: ABC Pvt Ltd
 
 # Short description of your site
-description: Let me introduce you to my geek side!
+description: One Stop Solution to Your Needs!
 
 # Your name to show in the footer
-author: Anudit Verma
+author: CSSC
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-url: "https://www.anudit.in/"
+#url: "https://www.anudit.in/"
 
 # baseurl should be an empty string
 baseurl: ""
@@ -46,7 +46,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/av.jpg"
+avatar: "/assets/img/navbarimage.jpg"
 round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of the title text,
