--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ title: ABC Pvt Ltd
 description: One Stop Solution to Your Needs!
 
 # Your name to show in the footer
-author: CSSC
-
+author:
+  name: CSSC
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
