--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-#url: "https://www.anudit.in/"
+url: "https://www.anudit.in/"
 
 # baseurl should be an empty string
 baseurl: ""
@@ -58,9 +58,9 @@ round-avatar: true
 # By default, the navigation bar and footer have a light gray background, and the main page
 # has a white background. You can specify a different background colour or a background image
 # for the navigation bar, the main page, and the footer.
- navbar-col: "green"
+navbar-col: "green"
 # navbar-img: "/assets/img/bgimage.png"
- footer-col: "green"
+footer-col: "green"
 # footer-img: "/assets/img/bgimage.png"
 # page-col: "#FF0000"
 # page-img: "/assets/img/bgimage.png"
