--- a/_config.yml
+++ b/_config.yml
@@ -58,13 +58,15 @@ round-avatar: true
 # By default, the navigation bar and footer have a light gray background, and the main page
 # has a white background. You can specify a different background colour or a background image
 # for the navigation bar, the main page, and the footer.
-navbar-col: "green"
-# navbar-img: "/assets/img/bgimage.png"
-footer-col: "green"
-# footer-img: "/assets/img/bgimage.png"
-# page-col: "#FF0000"
-# page-img: "/assets/img/bgimage.png"
-
+navbar-col: "#BFBFBF"
+navbar-text-col: "#404040"
+navbar-children-col: "#F5F5F5"
+page-col: "#FFFFFF"
+link-col: "#008AFF"
+hover-col: "#0085A1"
+footer-col: "#BFBFBF"
+footer-text-col: "#777777"
+footer-link-col: "#404040"
 # --- Footer options --- #
 
 # Select the social network links that you want to show in the footer.
