--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ title: ABC Pvt Ltd
 description: One Stop Solution to Your Needs!
 
 # Your name to show in the footer
-author:
-  name: CSSC
+author: CSSC
+#  name: CSSC
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-url: "https://www.anudit.in/"
+url: "https://brat-eek.github.io"
 
 # baseurl should be an empty string
 baseurl: ""
@@ -58,7 +58,7 @@ round-avatar: true
 # By default, the navigation bar and footer have a light gray background, and the main page
 # has a white background. You can specify a different background colour or a background image
 # for the navigation bar, the main page, and the footer.
-navbar-col: "#BFBFBF"
+#navbar-col: "#BFBFBF"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
@@ -73,20 +73,20 @@ footer-link-col: "#404040"
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-# email: "someone@example.com"
-  facebook: anuditverma
-  github: anuditverma
-  twitter: anuditverma
+  email: "akshayjain2507@gmail.com"
+  facebook: akshayjain2004
+#  github: anuditverma
+#  twitter: anuditverma
 # reddit: yourname
-  linkedin: anuditverma
+#  linkedin: anuditverma
 # xing: yourname
 # stackoverflow: 4590331/anudit-verma
 # snapchat: yourname
-  instagram: anuditverma
-  rss: false
+#  instagram: anuditverma
+#  rss: false
 # youtube: user/yourname
 # spotify: yourname
-# telephone: +1-(000)-000-0000
+  telephone: +917022207522
 # steam: yourname
 # twitch: yourname
 # yelp: yourname
@@ -98,19 +98,18 @@ social-network-links:
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
+  telephone: true
   facebook: true
-  linkedin: true
-  vk: false
+  email: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "anudit.in"
+url-pretty: "yourdomain.in"
 
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics ID to track your website using GA
-google_analytics: "UA-84991519-1"
+#google_analytics: "UA-84991519-1"
 
 # Google Tag Manager ID
 #gtm: ""
@@ -118,7 +117,7 @@ google_analytics: "UA-84991519-1"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "anuditverma"
+#disqus: "anuditverma"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
