--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,9 @@ navbar-links:
     - L&T: "https://github.com/anuditverma/org.civicrm.osdi"
     - Havells: "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
     - Siska: "https://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
+  Rate Card: "resume/Anudit_Verma.pdf"
   About Me: "aboutme"
-  Resume | CV: "resume/Anudit_Verma.pdf"
+  Contact: "contact"
 #  Tags: "tags"
 
 # Image to show in the navigation bar - image must be a square (width = height)
