--- a/_config.yml
+++ b/_config.yml
@@ -30,14 +30,16 @@ baseurl: ""
 navbar-links:
   Recommends: "books"
   Categories:
-    - Heavy Electric: "http://ieeexplore.ieee.org/document/7918794/"
-    - Stadium Lights: "https://scholar.google.co.in/citations?user=4p4smu0AAAAJ"
+    - Heavy Electric: ""
+    - Stadium Lights: "lights"
     - Residential Lights: "https://www.researchgate.net/profile/Anudit_Verma"
   Franchise:
     - L&T: "https://github.com/anuditverma/org.civicrm.osdi"
     - Havells: "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
     - Siska: "https://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
-  Rate Card: "resume/Anudit_Verma.pdf"
+  Rate Card:
+    - Dec 2020: "resume/Anudit_Verma.pdf"
+    - Jul 2020: "resume/Anudit_Verma.pdf"
   About Me: "aboutme"
   Contact: "contact"
 #  Tags: "tags"
