--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,8 @@ baseurl: ""
 
 # List of links in the navigation bar
 navbar-links:
-  Recommends: "books"
   Categories:
-    - Heavy Electric: ""
+    - Heavy Electric: "books"
     - Stadium Lights: "pages/lights"
     - Residential Lights: "https://www.researchgate.net/profile/Anudit_Verma"
   Franchise:
@@ -41,7 +40,7 @@ navbar-links:
     - Dec 2020: "resume/Anudit_Verma.pdf"
     - Jul 2020: "resume/Anudit_Verma.pdf"
   About Me: "pages/aboutme"
-  Contact: "contact"
+  Contact: "pages/contact"
 #  Tags: "tags"
 
 # Image to show in the navigation bar - image must be a square (width = height)
