--- a/_config.yml
+++ b/_config.yml
@@ -57,15 +57,15 @@ round-avatar: true
 # By default, the navigation bar and footer have a light gray background, and the main page
 # has a white background. You can specify a different background colour or a background image
 # for the navigation bar, the main page, and the footer.
-#navbar-col: "#BFBFBF"
-navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
-page-col: "#FFFFFF"
+navbar-col: "#005580"
+navbar-text-col: "#ffffff"
+navbar-children-col: "#005580"
+page-col: "#ffffff"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#BFBFBF"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-col: "#005580"
+footer-text-col: "#ffffff"
+footer-link-col: "#ffffff"
 # --- Footer options --- #
 
 # Select the social network links that you want to show in the footer.
