--- a/_config.yml
+++ b/_config.yml
@@ -59,10 +59,10 @@ round-avatar: true
 # for the navigation bar, the main page, and the footer.
 navbar-col: "#005580"
 navbar-text-col: "#ffffff"
-navbar-children-col: "#005580"
+navbar-children-col: "#ffffff"
 page-col: "#ffffff"
 link-col: "#008AFF"
-hover-col: "#0085A1"
+hover-col: "#990000"
 footer-col: "#005580"
 footer-text-col: "#ffffff"
 footer-link-col: "#ffffff"
