--- a/_config.yml
+++ b/_config.yml
@@ -31,14 +31,14 @@ navbar-links:
   Categories:
     - Heavy Electric: "books"
     - Stadium Lights: "pages/lights"
-    - Residential Lights: "https://www.researchgate.net/profile/Anudit_Verma"
+    - Residential Lights: "https://www.facebook.com/akshayjain2004"
   Franchise:
-    - L&T: "https://github.com/anuditverma/org.civicrm.osdi"
-    - Havells: "https://www.linkedin.com/feed/update/activity:6273369896978087936/"
-    - Siska: "https://www.moneycontrol.com/news/technology/ey-hackathon-winners-develop-tax-compliance-solutions-with-automation-2439821.html"
+    - L&T: "https://www.facebook.com/akshayjain2004"
+    - Havells: "https://www.facebook.com/akshayjain2004"
+    - Siska: "https://www.facebook.com/akshayjain2004"
   Rate Card:
-    - Dec 2020: "resume/Anudit_Verma.pdf"
-    - Jul 2020: "resume/Anudit_Verma.pdf"
+    - Dec 2020: "resume/sample.pdf"
+    - Jul 2020: "resume/sample.pdf"
   About Me: "pages/aboutme"
   Contact: "pages/contact"
 #  Tags: "tags"
