edited about me

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ navbar-links:
   Rate Card:
     - Dec 2020: "resume/sample.pdf"
     - Jul 2020: "resume/sample.pdf"
-  About Me: "pages/aboutme"
+  About Us: "pages/aboutme"
   Contact: "pages/contact"
 #  Tags: "tags"
 
