added price pdfs

--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ navbar-links:
     - Havells: "https://www.facebook.com/akshayjain2004"
     - Siska: "https://www.facebook.com/akshayjain2004"
   Rate Card:
-    - Dec 2020: "resume/sample.pdf"
-    - Jul 2020: "resume/sample.pdf"
+    - ESP Price List: "resume/ESPPriceList.pdf"
+    - Agri Price List: "resume/AgriPriceList.pdf"
   About Us: "pages/aboutme"
   Contact: "pages/contact"
 #  Tags: "tags"
