--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: ABC Pvt Ltd
+title: Venkateshwara Enterprises
 
 # Short description of your site
 description: One Stop Solution to Your Needs!
